# source-atlas

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  BRANCH_AWARE_USAGE.py  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  PUBLISH_GUIDE.md  README.md  SECURITY.md  TEST_INDEXING.md  clean_history.bat  config.py  demo.json  docker-compose.yml  fix_all_imports.ps1  fix_all_lsp_imports.py  fix_imports.py  fix_lsp_imports.py  main.py  publish.bat  pyproject.toml  pytest.ini  query.cql  requirements-dev.txt  requirements.txt  restructure.bat  restructure.py  setup.py  test.py  test_indexing.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  static.yml  tests.yml
analyzers/: base_analyzer.py  java_analyzer.py
database/: neo4j.py  neo4j_impl.py
deployment/neo4j/: .env  docker-compose.yml
docs/: architecture.md  configuration.md  docs.html  index.html  style.css
extractors/: base_extractor.py
extractors/java/: java_extractor.py  kafka_extractor.py  rabbit_extractor.py  spring_event_extractor.py  springboot_annotation_extractor.py
factory/: analyzer_factory.py
lsp/: __main__.py  lsp_service.py
lsp/implements/: java_lsp.py
lsp/multilspy/: language_server.py  multilspy_logger.py  multilspy_utils.py
lsp/multilspy/language_servers/clangd_language_server/: clangd_language_server.py
lsp/multilspy/language_servers/dart_language_server/: dart_language_server.py
lsp/multilspy/language_servers/eclipse_jdtls/: eclipse_jdtls.py
lsp/multilspy/language_servers/gopls/: gopls.py
lsp/multilspy/language_servers/jedi_language_server/: jedi_server.py
lsp/multilspy/language_servers/kotlin_language_server/: kotlin_language_server.py
lsp/multilspy/language_servers/solargraph/: solargraph.py
lsp/multilspy/language_servers/typescript_language_server/: typescript_language_server.py
models/: domain_models.py
output/demo/: chunks.json
output/onestudy/: chunks.json
output/simple-spring/: chunks.json
output/spring-demo/: chunks.json
result/: chunks.json  dependency_graph.json  statistics.json
source_atlas/: __init__.py  __main__.py  cli.py
source_atlas/analyzers/: analyzer_factory.py  base_analyzer.py  java_analyzer.py  java_constants.py
source_atlas/config/: config.py  java_constants.py
source_atlas/extractors/: base_extractor.py
source_atlas/extractors/java/: java_extractor.py  kafka_extractor.py  quarkus_extractor.py  rabbit_extractor.py  spring_event_extractor.py  springboot_annotation_extractor.py
source_atlas/lsp/: lsp_service.py
source_atlas/lsp/implements/: java_lsp.py
source_atlas/lsp/multilspy/: language_server.py  multilspy_config.py  multilspy_logger.py  multilspy_utils.py
source_atlas/models/: domain_models.py
source_atlas/neo4jdb/: neo4j_db.py  neo4j_dto.py  neo4j_service.py
source_atlas/utils/: common.py  lsp_utils.py  tree_sitter_helper.py
src/: main.py
src/analyzers/: base_analyzer.py  java_analyzer.py
src/factory/: analyzer_factory.py  config_builder.py
src/lsp/implements/: java_lsp.py
src/models/: analyzer_config.py  domain_models.py
src/processors/: base_processor.py  java_processor.py
src/processors/java/: endpoint_extractor.py  java_processor.py
src/utils/: class_cache_builder.py  comment_remover.py  dependency_graph_builder.py  java_method_type_detector.py  java_rest_endpoint_extractor.py  result_exporter.py  statistics_generator.py  type_resolver.py
tests/: integration_test.py  test_annotation_relationships.py  test_relationship_preservation.py  validation_test.py
utils/: comment_remover.py  common.py
(+14 files in other folders)
